# frontier

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENT_TEAMS_TASK_LIST.md  CLAUDE.md  DATABASE_SCHEMA.md  Frontier - Value Proposition.md  ISSUES.md  README.md  ScrollHint.tsx  TASKS.md  config.yaml  config.yaml.example  docker-compose.yml  frontier_intro.pptx  google-stitch-prompt.md  openapi.json  package-lock.json  project.py  pyproject.toml  requirements.txt  requirements_pip.txt
.claude/: settings.local.json
.claude/agents/: browser-tester.md
.claude/commands/: commit-push-pr.md
agent-logos/: preview.html
agent-logos-v2/: preview.html
agent-logos-v3/: preview.html
custom_ui/: README.md  index.html  package-lock.json  package.json  sample-schema.json  sample.json
custom_ui/mock_server/: README.md
custom_ui/src/: App.svelte  Renderer.svelte  componentRegistry.ts  renderer.html
docker/: Dockerfile.frontier  Dockerfile.http-example  Dockerfile.langgraph-example  Dockerfile.mock-ldap  README.md  config.yaml
docs/: README.md  chat-segregation-feature.md  design-audit.md  dynamic-ui-feature.md  http-connector-user-guide.md  langgraph-connector-user-guide.md  metrics-tracking-feature.md  supported-elements-user-guide.md
docs/ard/: 01-context.mmd  02-container.mmd  03-component.mmd  04-dataflow.mmd  05-deployment.mmd  ARCHITECTURE.md  ARCHITECTURE_PACKAGE.md  C4Component.mmd  C4Context.mmd  DATABASE_SCHEMA.md  README.md
docs/feature/: README.md  chat-segregation-feature.md  dynamic-ui-feature.md  metrics-tracking-feature.md
docs/prd/: 01-executive-summary.md  02-product-vision.md  03-user-personas.md  04-features.md  05-user-journeys.md  06-architecture.md  07-success-metrics.md  08-roadmap.md  09-appendix.md  index.md
docs/user-guide/: README.md  frontend-approval-guide.md  (+8 more)
example_project/: example_agent.py  project.py
scripts/: add_view_columns.py  build.sh  build_fe.sh  check_python_build_package.sh  install_env.sh  run.sh  start.sh
src/: config.yaml  project.py
src/api/: main.py  (+2 more)
tests/: conftest.py  test_api_agents.py  test_api_approval.py  test_api_chat.py  test_api_projects.py  test_approval_service.py  test_auth_unit.py  test_chat_service.py  test_config.py  test_connectors.py  test_db_project_unit.py  test_schema.py  test_utils.py  test_version_service.py
(+285 files in other folders)
