[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conduit"
version = "0.1.0"
description = "Conduit project"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "requests",
    "httpx",
    "pydantic"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"conduit.frontend" = ["dist/**/*"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["conduit*"]