[build-system]
build-backend = "setuptools.build_meta"

requires = [ "setuptools", "wheel" ]

[project]
name = "frontier"
version = "0.1.0"
description = "Frontier project"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "fastapi",
  "httpx",
  "psycopg2-binary>=2.9",
  "pydantic",
  "requests",
  "sqlalchemy>=2",
  "uvicorn",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"frontend" = [ "dist/**/*" ]

[tool.setuptools.packages.find]
where = [ "src" ]
include = [ "api*", "core*", "sdk*", "frontend*" ]

[tool.isort]
profile = "black"

[tool.autoflake]
remove-all-unused-imports = true
remove-unused-variables = true

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = true
ignore-private = true
ignore-module = true
fail-under = 0
